[package]
name = "wafcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "cookies"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
scraper = "0.19"
anyhow = "1"
lazy_static="1.4"
comfy-table = "7.1.0"
sha2 = "0.10"
rayon = "1.10.0"
